package de.digitalcollections.model.api.identifiable.entity.agent;

import de.digitalcollections.model.api.identifiable.entity.Entity;

public interface Family extends Entity, Agent {}
