package de.digitalcollections.model.impl.identifiable.entity.agent;

import de.digitalcollections.model.api.identifiable.entity.agent.Agent;
import de.digitalcollections.model.impl.identifiable.entity.EntityImpl;

public class AgentImpl extends EntityImpl implements Agent {}
